# protobuf-cmake

./: CMakeLists.txt  build.bat  protobuf-common.cmake
libprotobuf/: CMakeLists.txt
libprotoc/: CMakeLists.txt
protoc/: CMakeLists.txt
